@@ -1,26 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <settings>
-    <setting label="30000" type="lsep" />
-    <setting label="30001" type="bool" id="fullcredits" default="true"/>
-    <setting label="30002" type="bool" subsetting="true" id="viewDirector" default="true" enable="eq(-1,true)"/>
-    <setting label="30003" type="bool" subsetting="true" id="viewActors" default="true" enable="eq(-2,true)"/>
-    <setting label="30004" type="bool" subsetting="true" id="viewFilmmakers" default="true" enable="eq(-3,true)"/>
-    <setting label="30005" type="bool" subsetting="true" id="fakeactor" default="false" enable="eq(-4,true)"/>
-
-    <setting label="30100" type="lsep" />
-    <setting label="30101" type="bool" id="rating_ten" default="true" enable="!eq(8,true)"/>
-    <setting label="30102" type="bool" id="other_rating" default="true"/>
+    <category label="30000">
+	    <!-- <setting label="30000" type="lsep" /> -->
+	    <setting label="30001" type="bool" id="fullcredits" default="true"/>
+	    <setting label="30002" type="bool" subsetting="true" id="viewDirector" default="true" enable="eq(-1,true)"/>
+	    <setting label="30003" type="bool" subsetting="true" id="viewActors" default="true" enable="eq(-2,true)"/>
+	    <setting label="30004" type="bool" subsetting="true" id="viewFilmmakers" default="true" enable="eq(-3,true)"/>
+	    <setting label="30005" type="bool" subsetting="true" id="fakeactor" default="false" enable="eq(-4,true)"/>
+	</category>
     
-    <setting label="30200" type="lsep" />
-    <setting label="30201" type="bool" id="thumbs" default="true"/>
-    <setting label="30202" type="bool" subsetting="true" id="bigThumbs" default="true" enable="eq(-1,true)" />
-    <setting label="30203" type="bool" id="trailer" default="true"/>
-    <setting label="30204" type="bool" id="backdrops" default="true"/>
-    <setting label="30205" type="bool" id="imdb" default="true"/>
+	<category label="30100">
+	    <!-- <setting label="30100" type="lsep" /> -->
+	    <setting label="30101" type="bool" id="rating_ten" default="true" enable="!eq(8,true)"/>
+	    <setting label="30102" type="bool" id="other_rating" default="true"/>
+	    <setting label="30205" type="bool" id="imdb" default="true"/>
+    </category>
+     
+    <category label="30200">
+		<!-- <setting label="30200" type="lsep" /> -->
+	    <setting label="30201" type="bool" id="thumbs" default="true"/>
+	    <setting label="30202" type="bool" subsetting="true" id="bigThumbs" default="true" enable="eq(-1,true)" />
+	    <setting label="30203" type="bool" id="trailer" default="true"/>
+	    <setting label="30204" type="bool" id="backdrops" default="true"/>
+    </category>
     
-    <setting label="30300" type="lsep" />
-    <setting label="30301" type="bool" id="critic" default="false"/>
-    <setting label="30302" type="bool" id="public" default="false"/>
-    <setting label="30303" type="bool" id="forum" default="false"/>
-    <setting label="30304" type="bool" id="frasi_celebri" default="false"/>
+    
+    <category label="30300">
+	    <!-- <setting label="30300" type="lsep" />  -->
+	    <setting label="30301" type="bool" id="critic" default="false"/>
+	    <setting label="30302" type="bool" id="public" default="false"/>
+	    <setting label="30303" type="bool" id="forum" default="false"/>
+	    <setting label="30304" type="bool" id="frasi_celebri" default="false"/>
+    </category>
 </settings>
